--- a/status.html
+++ b/status.html
@@ -279,6 +279,7 @@ position: absolute;
 width: 594px;
 height: 433px;
 overflow-x:hidden;
+overflow-y:hidden;
 z-index: 6;
  }
 #aaa {
@@ -337,271 +338,68 @@ position: relative;
 
 <div id="stuff">
 
-<div style="background-image:url(https://i.imgur.com/6PYDWxS.png); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 100%">
-
-<div style="width: 650px;height: 73px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/9cXLOwL.png"><img src="https://i.imgur.com/9cXLOwL.png"><img src="https://i.imgur.com/9cXLOwL.png"><img src="https://i.imgur.com/9cXLOwL.png"><img src="https://i.imgur.com/9cXLOwL.png"><img src="https://i.imgur.com/9cXLOwL.png"><img src="https://i.imgur.com/9cXLOwL.png"><img src="https://i.imgur.com/9cXLOwL.png"><img src="https://i.imgur.com/9cXLOwL.png"><img src="https://i.imgur.com/9cXLOwL.png"><img src="https://i.imgur.com/9cXLOwL.png"></div>
-<div style= "padding-left: 20%; padding-right: 20%;">
+<div style="overflow-x: hidden; overflow-y: hidden; background-image:url(https://i.imgur.com/Q7kydKq.png); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; text-align:justify; line-height: 100%">
 
 
-<br><br>
-<center><img src="https://i.imgur.com/Bm18E8o.gif"></center><br>
-<center><font color="#B49797">{ status }</font></center>
+
+<div style="padding-left: 15px; position: absolute; overflow-x: hidden; overflow-y: hidden; z-index: 10;">
+<img src="https://i.imgur.com/K7z9mQr.png">
+</div>
+
+<div style="font-family: Verdana; font-size:8px; overflow-y: hidden; position: absolute; width: 150px;height: 80px;overflow-x: hidden; padding-top: 63px; padding-left: 275px; z-index: 20;"><br><br>
+
+<img src="https://i.imgur.com/OJC3mkF.gif">　<img src="https://i.imgur.com/WAokv11.gif">　<img src="https://i.imgur.com/OJC3mkF.gif">
 <br>
-<center><font color="#A07777">feeling: </font><font color="#E67474">totally in love </font><img src="https://i.imgur.com/8ow5cKb.gif"></center><br><br>
-<center><img src="https://i.imgur.com/kN7ZWlR.png"><center><br><br><br><style>
-p { margin: 0; }
-.spoiler-area {
-
-}
-.spoiler-area.is-closed { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-</head>
-<body>
-
-<div style="font-family: Verdana; font-size:8px;"><font color="#624646"><img src="https://i.imgur.com/Djl16gZ.gif"/>　<a data-target="spoiler1" class="btn-spoiler">+ click</a></font>　<img src="https://i.imgur.com/Djl16gZ.gif"/></div>
-<div id="spoiler1" class="spoiler-area is-closed">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-
-<div style="font-family: Verdana; font-size:8px;"><font color="#B49797">there are 10 status once, check the archive right <a href="https://photos.app.goo.gl/iLTeYQh8XpPmmA6Q2"target="_blank"><font color="#E67474">here</font></a> !</font></div>
-
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "+ click" ){
-                this.innerHTML = "- hide";
-                $spoiler.classList.remove("is-closed");
-            } else {
-                this.innerHTML = "+ click";
-                $spoiler.classList.add("is-closed");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-
-<!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">09.20.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109010_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090210_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=19nECcIv4zJ5K63g3dyV4qY4un0y_T75m"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109210_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092310_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1N27a3YJkOzMXOFONYpp885Do7VlDIHs3"></script>
-</font></font>
+<sub>　　　{ status }</sub>
+<br><br>
 </div>
-</body>
 
-<br><br>
-　　<font color="#815B5B">felting is so relaxing ~</font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">09.08.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109099_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090299_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1A37xJOtzpHRAsIMzvchSXt0XhO2WlJQ1"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109299_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092399_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1ZjBRlkZyJTrJbk2I3LxYGM40kmeSidBq"></script>
-</font></font>
+
+
+<div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 248px; z-index: 20;"><br><br>
+<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">motivated</font> <img src="https://i.imgur.com/lXLBfpo.gif">
+<br><br><br>
+　　　　　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/iLTeYQh8XpPmmA6Q2"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
 </div>
-</body>
 
-<br><br>
-　　<font color="#815B5B">love is always the answer ♡ . * ･ ｡</font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">08.22.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109088_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090288_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1HXhl4sWIHSxx_5UeD9GwjaqD6SFYv71T"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109288_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092388_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1-QQqpe0X7INRXEXfAF5t_jtFLuv7Bzs2"></script>
-</font></font>
-</div>
-</body>
 
-<br><br>
-　　<font color="#815B5B">i'm feeling so light and shiny ♡ !</font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">08.08.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109077_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090277_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1cR5Rrd6mwvMN-PqeZUxX6N-EdI2aIyhw"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109277_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092377_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1QwrMAI2zQZgXLYX_-E5l56JFvM0L0CHt"></script>
-</font></font>
-</div>
-</body>
 
-<br><br>
-　　<font color="#815B5B">-ˏˋ one year of middlepot.com ˊˎ- </font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">08.01.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109066_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090266_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1aehLD5iaUBUkhaOXFRU5k8bau-Tb4LuR"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109266_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092366_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1cjF690Psd_Lgt1Z3Xnc9UUwztIb8V_5b"></script>
-</font></font>
-</div>
-</body>
+<div style="padding-left: 163px; padding-top: 130px;">
+<div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
-<br><br>
-　　<font color="#815B5B">my soft wings protect me from everything bad ഒ 。.*</font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">07.25.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109055_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090255_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1z2myiqJk475GXK1QLSmW1V-CH9uzQZme"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109255_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092355_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1Mqdykr4SY2ERKJYQXEcXrp113c9FNvhy"></script>
-</font></font>
-</div>
-</body>
+　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>10.03.18</sup></font> <font color="#9cb7b7">→</font>　i'm doing my best !!!
 
-<br><br>
-　　<font color="#815B5B">i love him i love him I LOVE HIM SO MUCH</font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">07.15.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109044_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090244_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1XPDda-5u3_ePxSAuWvn5QjX2tl1HAV5e"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109244_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092344_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1rYi5gdRfAlh3iX-4PXZSqdeJqqT2p98a"></script>
-</font></font>
-</div>
-</body>
+<br><br><br>
+　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>09.20.18</sup></font> <font color="#d8abab">→</font>　felting is so relaxing ~
 
-<br><br>
-　　<font color="#815B5B">♡ pão de queijo + coffee ♡</font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">07.05.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109033_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090233_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=11R1_sQLPu-MY_IfnqoUUYF2E-GT0_xKp"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109233_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092333_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=18exhoVW3wI7uYGp33vxkFSYelpt-u2hw"></script>
-</font></font>
-</div>
-</body>
+<br><br><br>
+　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>09.08.18</sup></font> <font color="#bea5ce">→</font>　love is always the answer ♡ . * ･
 
-<br><br>
-　　<font color="#815B5B">thank you so much for your support ♡ !</font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">06.26.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109022_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090222_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1fl7o2dzfjoRJJVmAWhVo-oQAdEYogM_z"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109222_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092322_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1vPUP16_k1ZmxJ-2pBlOVDB5Sg4JZ9i8J"></script>
-</font></font>
-</div>
-</body>
+<br><br><br>
+　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>08.22.18</sup></font> <font color="#c48d8d">→</font>　i'm feeling so light and shiny ♡ !
 
-<br><br>
-　　<font color="#815B5B">i've been super motivated lately (  ง*`꒳´*) ง</font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">06.16.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s29418521090_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s294185210902_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1Q-0uQ9qRoiyZnvAtsq5ubQVl1yglMLfT"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s29418521092_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s294185210923_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1jMM7xdzlfnpT0AvuNERBFWF2IlbZvrMp"></script>
-</font></font>
-</div>
-</body>
+<br><br><br>
+　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>08.08.18</sup></font> <font color="#a0acbc">→</font>　-ˏˋ one year of middlepot.com ˊˎ-
 
-<br><br>
-　　<font color="#815B5B">i really must stop blaming myself for everything ; ;</font>
-<br><br>
-<!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
+<br><br><br>
+　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>08.01.18</sup></font> <font color="#9cb7b7">→</font>　my soft wings protect me from<br>　　　　　　　　　everything bad ഒ 。.*
 
-<br><br>
+<br><br><br>
+　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>07.25.18</sup></font> <font color="#d8abab">→</font>　i love him i love him I LOVE HIM<br>　　　　　　　　　SO MUCH
 
+<br><br><br>
+　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>07.15.18</sup></font> <font color="#bea5ce">→</font>　♡ pão de queijo + coffee ♡
+
+<br><br><br>
+　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>07.05.18</sup></font> <font color="#c48d8d">→</font>　thank you so much for your<br>　　　　　　　　　support ♡ !
+
+<br><br><br>
+　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>06.26.18</sup></font> <font color="#a0acbc">→</font>　i've been super motivated lately<br>　　　　　　　　　(  ง*`꒳´*) ง
 
 
 </div>
+</div>
+
 
 
 </div>
