--- a/cemetery.html
+++ b/cemetery.html
@@ -480,17 +480,7 @@ function getPosition(el) {
 
 
 <center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#A79595">
-<yay><a id="_c2941852109066_"><img width="13px" height="auto" src="https://i.imgur.com/nETAnsb.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_c29418521090266_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1d_GbAB3L7CScaXTYmA6gKiwrshXQQfuc"></script>
-</font></font>
-</div>
-</body>
+<img width="13px" height="auto" src="https://i.imgur.com/nETAnsb.gif"/>
 </center>
 
 
@@ -505,17 +495,7 @@ yay { cursor: pointer; }
 
 
 <center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#A79595">
-<yay><a id="_c2941852109055_"><img width="13px" height="auto" src="https://i.imgur.com/nETAnsb.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_c29418521090255_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1Hjb5U0dBCvOHiYWEWkZJabtBgIR_srRx"></script>
-</font></font>
-</div>
-</body>
+<img width="13px" height="auto" src="https://i.imgur.com/nETAnsb.gif"/>
 </center>
 
 
@@ -529,17 +509,7 @@ yay { cursor: pointer; }
 
 
 <center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#A79595">
-<yay><a id="_c2941852109044_"><img width="13px" height="auto" src="https://i.imgur.com/nETAnsb.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_c29418521090244_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1SUEECtBqBpSFXnpnttPjR8fEhoMUSuD3"></script>
-</font></font>
-</div>
-</body>
+<img width="13px" height="auto" src="https://i.imgur.com/nETAnsb.gif"/>
 </center>
 
 
@@ -563,17 +533,7 @@ Professora Vera Rossi"</font></center><br><br>
 
 
 <center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#A79595">
-<yay><a id="_c2941852109033_"><img width="13px" height="auto" src="https://i.imgur.com/nETAnsb.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_c29418521090233_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1MM3d_j5p3w_4A0vkMrROkp81MRqe01-q"></script>
-</font></font>
-</div>
-</body>
+<img width="13px" height="auto" src="https://i.imgur.com/nETAnsb.gif"/>
 </center>
 
 
@@ -587,17 +547,7 @@ yay { cursor: pointer; }
 
 
 <center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#A79595">
-<yay><a id="_c2941852109022_"><img width="13px" height="auto" src="https://i.imgur.com/nETAnsb.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_c29418521090222_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1RWqB2Q6OqXlefqF_JDBfKHXAIjJqFprI"></script>
-</font></font>
-</div>
-</body>
+<img width="13px" height="auto" src="https://i.imgur.com/nETAnsb.gif"/>
 </center>
 
 
@@ -610,17 +560,7 @@ yay { cursor: pointer; }
 </font><br><br>
 
 <center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#A79595">
-<yay><a id="_c29418521090_"><img width="13px" height="auto" src="https://i.imgur.com/nETAnsb.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_c294185210902_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1aCVlFi5rlVcaFmQWQEwLAA2dhvJY2Zjm"></script>
-</font></font>
-</div>
-</body>
+<img width="13px" height="auto" src="https://i.imgur.com/nETAnsb.gif"/>
 </center>
 
 <br><br><br>
