--- a/faq.html
+++ b/faq.html
@@ -391,11 +391,11 @@ i think this is enough to clarify your doubts !
 </font>
 
 <a name="rules" id="rules"></a>
-<sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　what are the rules for using the chats ?</font><br><br><br>
+<sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　what are the rules for using the chat ?</font><br><br><br>
 <font color="#d8b9af">　( august . 18 . 2017 )</font>
 <br><br>
 <font color="#B1A69E">
-i have two chats currently on this site, which are hosted by cbox. i have some rules of use for them :<br>
+i have one chat currently on this site, which is hosted by cbox. i have some rules of use for it :<br>
 ・ i use a tiny image as avatar for quick identification. you shouldn't use an avatar, because it would be confusing for everyone. if you want to link images please post in imgur.com and put the link properly, according to the "help" ;<br>
 ・ it is preferable not to use personal links because you may be blocked by spam. in fact, avoid anything that can be identified as spam, be as clean as possible ;<br>
 ・ please use clear language and do not speak in languages ​​other than english for a long conversation. i will answer, but predictably use english ;<br>
