--- a/tiny-journal.html
+++ b/tiny-journal.html
@@ -361,6 +361,29 @@ enjooooy ~<br>
 <br><br><br>
 
 <div style="text-align:left">
+<center><font color="#93B3A9">
+<img src="https://i.imgur.com/OFc43OT.gif"><br><br>
+october . 10 . 2018<br>
+☆ be soft ☆
+</font>
+</center><font color="#A9CBC1">
+<br>
+　　very important reminder :<br>
+　　i must be soft<br>
+　　everytime, anytime<br>
+　　everywhere, anywhere<br><br>
+
+　　soft = comfy<br>
+　　soft = pure<br>
+　　soft = ♡♡♡<br>
+　　soft = myself !!!<br><br>
+</font>
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
+
+<div style="text-align:left">
 <center><font color="#b7aba8">
 <img src="https://i.imgur.com/9v2tHpo.gif"><br><br>
 september . 13 . 2018<br>
@@ -462,34 +485,6 @@ march . 09 . 2018<br>
 　　pomft pomft pomf ,<br>
 　　i want to love you !!!<br><br>
 </font>
-
-
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br><br><br>
-
-
-<div style="text-align:left">
-<center><font color="#b7aba8">
-<img src="https://i.imgur.com/9v2tHpo.gif"><br><br>
-november . 22 . 2017<br>
-☆ the lament of the real girl with a non-real soul ☆
-</font>
-</center>
-<font color="#ccbdb9">
-<br><br>
-
-　　i'm a real girl. i'm not a child anymore. i'm not perfect as a doll.<br>
-　　i'm made by mother nature, i have skin, i'm able to give life. my body has bloomed, even though my soul has not. i now have to be responsible and take care of myself and others. i'm very sensitive and needy, but i have motherhood inside me. i do my best to be safe and do things properly.<br>
-　　i'm real and i can get broken, i'm biological and my insides hurt.<br>
-　　nature is pretty, but it's very hard to be part of it.<br>
-　　i do really want to be a child forever, not be real, be perfect. but i can't.<br>
-　　i can be youthful and pure, i can be soft and pretty, i can be fragile and delicate. but i am a person. there are good things about being a person because i can be with mother nature and help her, which warms my heart. she loves me, and welcomes me. i'm very important to her and it's reciprocal.<br>
-<br><br>
-</font>
-
-
 
 
 
