--- a/look-book.html
+++ b/look-book.html
@@ -501,6 +501,11 @@ p { margin: 0; }
 <font color="#bca6a0"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub>　( these pictures are temporary )　<sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <br><br>
 
+<img width="200px" height="auto" src="https://i.imgur.com/G6YYew2.png"/><br><br>
+<br>
+
+
+<br><br><br>
 <img width="200px" height="auto" src="https://i.imgur.com/Ay48NUx.jpg"/><br><br>
 <br>
 
