--- a/portfolio.html
+++ b/portfolio.html
@@ -387,6 +387,14 @@ position: relative;
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> needle felt<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/4mpPzWm.jpg"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/q4TUzAP.jpg"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/i63xCU2.jpg">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> blog and website utilities<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <img src="https://i.imgur.com/KH3Qcj9.gif"> <img src="https://i.imgur.com/BafUAvl.gif"><br><br><img src="https://i.imgur.com/r6PF4ve.gif"><br><br><img src="https://i.imgur.com/kjJ7zti.gif"> <img src="https://i.imgur.com/hxS2jLj.gif"><br><br>
@@ -397,7 +405,8 @@ position: relative;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collage<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="250px" height="auto" src="https://i.imgur.com/VZmuGK3.png">
+<img width="250px" height="auto" src="https://i.imgur.com/VZmuGK3.png"><br><br>
+<img width="250px" height="auto" src="https://i.imgur.com/Wtz6hr6.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -411,6 +420,14 @@ position: relative;
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> fonts<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <a href="https://mega.nz/#!h4g3CK5Y!TEKXFSj7VQRduspCnP5D5eeD125QiTHpOYnbvMbX7GU" target="_blank"><img src="https://i.imgur.com/KjGQcfl.png"></a><br><br>
 <a href="https://mega.nz/#!goonkBiA!GfrdP7ywSNGSFTuNajH8r1fXBd2ObPJi4Q5WLsNZy2g" target="_blank"><img src="https://i.imgur.com/RgTmqQx.png"></a>
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> handmade accessories<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/AUXDRXU.jpg"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/L6mt2lf.jpg"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/FRmTcJh.jpg">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -437,6 +454,14 @@ position: relative;
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> pixel art<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <img src="https://i.imgur.com/izF44hd.gif"> <img src="https://i.imgur.com/0g0nBYV.gif">　<img src="https://i.imgur.com/4JtDFWu.gif"> <img src="https://i.imgur.com/WM81e9r.gif">　<img src="https://i.imgur.com/XfdewVz.gif">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> phone customization<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/6QZX0tS.png"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/S1Y4GqA.gif"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/L172YvL.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -491,6 +516,13 @@ position: relative;
  <a href="https://drive.google.com/open?id=1P25J6ByuujQ9aulT7RgK-gI5vHd7p8hM" target="_blank" id="meulinkzinhoinho">bichinho rosa .txt</a><br>
 <sub><sub><img width="17px" height="auto" src="https://i.imgur.com/seoaxlC.gif"></sub></sub>
  <a href="https://drive.google.com/open?id=0B6InsgpqCD97Vm4wT2d4NHBOejA" target="_blank" id="meulinkzinhoinho">poof pomf .txt</a><br>
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> phone case decor<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/2BIzI62.png"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/QhPOCLp.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
